fixed background for overlapped blocks

--- a/assets/stylesheets/ui/panes/preview.styl
+++ b/assets/stylesheets/ui/panes/preview.styl
@@ -5,6 +5,7 @@
   line-height 1.5em
   height 1.5em
   white-space nowrap
+  background-color white
 
   span.icon
     display inline-block
@@ -28,7 +29,7 @@
     &:focus
       outline none
       box-shadow 0 0 8px rgba(168, 82, 82, 0.6), 0 0 0 2px rgba(168, 82, 82, 0.6)
-      background-color lighten(rgba(168, 82, 82, 0.6), 95%)
+      background-color lighten(rgb(168, 82, 82), 95%)
       border-radius 4px
       position relative
       z-index 1000
